# Maximum-k-truss

./: CMakeLists.txt  README.md  res.xlsx
graph/graphIO/: CMakeLists.txt  graphio.c  mmio.c
graph/include/: graph.h
graph/samples/: main.cpp
graphIO/: CMakeLists.txt  bin_reader.h  graphio.c  graphio.h  mmio.c  mmio.h
gtest/: CMakeLists.txt  gtest-all.cc  gtest.h
include/: graph.h  mat.mtx  write.mtx  write1.mtx
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  graph.cpp
